# but_velodyne_lib

./: .gitignore  CMakeLists.txt  lr3.cfg  package.xml
include/but_velodyne/: Clustering.h  CollarLinesFilter.h  CollarLinesRegistration.h  CollarLinesRegistrationPipeline.h  Correspondence.h  EigenUtils.h  GlobalOptimization.h  GroundDetectionDataGenerator.h  KittiUtils.h  LineCloud.h  MoveEstimation.h  NormalsEstimation.h  PointCloudLine.h  PolarGridOfClouds.h  PoseGraphEdge.h  Regular2DGrid.h  Regular2DGridGenerator.h  Regular2DGridProcessor.h  SubseqRegistration.h  VelodynePointCloud.h  VelodyneSpecification.h  Visualizer2D.h  Visualizer3D.h  common.h  point_types.h
include/velodyne_pointcloud/: point_types.h
scripts/: angle_classes_coun.py  check_npy.py  close-largest-loop.sh  close-picked-subseq-loops.sh  close-random-loop.sh  close-subseq-loops.sh  cls-register-picked-pairs.sh  cls-register-subseq-pairs-original.sh  cls-register-subseq-pairs.sh  cnn_baseline_histogram.py  compute_average_precision.py  compute_separability.py  cummulate_transl_edges.py  cv_yaml.py  eulerangles.py  eval-ground-seg.sh  filter-corrections-by-dist.py  filter-unconverged-pairs-reg.sh  find_loops.py  find_random_loop.py  fix-invalid-registerations.sh  fix-reg-broken-part.sh  fix-velodyne-distortion.sh  generate_odom_data_conf_file.py  generate_odom_data_test_conf_file.py  gestalt_matches_distance.py  gestalt_matching_descriptors.py  gestalt_qda.m  get-subsequences.sh  get_pr.py  ground_labels_to_hdf5.py  halign-transform-compute.py  hand_eye_calibration.py  hand_eye_calibration_gd.py  imu_merge_data.py  imu_odometry.py  join_hdf_file.py  join_poses.py  kitti_2dmat_to_numpy.py  kitti_angular_diffs.py  (+51 more)
src/: Clustering.cpp  CollarLinesFilter.cpp  CollarLinesRegistration.cpp  CollarLinesRegistrationPipeline.cpp  EigenUtils.cpp  GlobalOptimization.cpp  GroundDetectionDataGenerator.cpp  KeypointsCorrespondenceProjector.cpp  LineCloud.cpp  MoveEstimation.cpp  NormalsEstimation.cpp  PointCloudLine.cpp  PolarGridOfClouds.cpp  PoseGraphEdge.cpp  SubseqRegistration.cpp  Termination.cpp  VelodynePointCloud.cpp  VelodyneSpecification.cpp  Visualizer2D.cpp  Visualizer3D.cpp  common.cpp
src/apps/: build-3d-model.cpp  cloud-eraser-from-seq.cpp  cloud-eraser.cpp  cloud-intensities-normalization.cpp  cls-reg-subsequences.cpp  cls-reg-to-map.cpp  cls-registration-of-picked-frames.cpp  cluster-collar-lines.cpp  cluster-subsequences.cpp  cluster-velodyne-points.cpp  collar-lines-odom-with-mapping.cpp  collar-lines-odom.cpp  correct-velodyne-distortion.cpp  defile-cloud.cpp  estimate-gmm-ransac-planes.cpp  estimate-planar-noise.cpp  extract-vfh.cpp  find-broken-subsequences.cpp  find-loops-vfh.cpp  gestalt-loops.cpp  gicp.cpp  ground-by-median.cpp  ground-det-annotation.cpp  ground-det-apriori-cnn.cpp  ground-det-cnn-NN.cpp  ground-det-cnn.cpp  ground-det-get-warp.cpp  ground-det-kitti-ann.cpp  ground-det-labeling.cpp  ground-labels-viewer.cpp  hor-align-and-defile.cpp  hor-align-from-ground-normal.cpp  keypoints-matches.cpp  kitti-viewer.cpp  manual-registration.cpp  move-detection.cpp  normalize-intensity.cpp  normals-estimation.cpp  odometry-cnn.cpp  overlaping-frames.cpp  (+25 more)
src/demos/: demo-artif-room.cpp  gde-cnn-visualization.cpp
src/mit-dgc-data/c/: example1-poses  example2-images  example3-gps  example4-velodyne  example5-sick  to-kitti.cpp  velodyne.h
